[package]
name = "babelfont"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.3" }
designspace = { path = "../designspace", features = ["norad"] }
env_logger = "0.9.0"
fonttools = { path = "../fonttools", features = ["rayon"] }
kurbo = "0.8"
lazy_static = "1.4.0"
log = "0.4.14"
norad = { version = "0.6", features = ["rayon", "kurbo"]}
openstep-plist = { path = "../openstep-plist" }
serde-xml-rs = "0.4"
shrinkwraprs = "0.3.0"
snafu = "0.6.10"
uuid = { version = "0.8", features = ["v4"] }
