[package]
name = "fonttools_cli"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
description = "Command line utilities for manipulating OpenType files"
repository = "https://github.com/simoncozens/fonttools-rs"
license = "Apache-2.0"

[dependencies]
clap = "2.33.3"
env_logger = "0.8"
fonttools = { path = "../fonttools", features = ["rayon"] }
indicatif = {version = "0", features = ["rayon"]}
itertools = "0.10.0"
kurbo = { version = "0.8.1" }
log = "0.4.14"
otspec = {path = "../otspec" }
rayon = "1.0.1"
regex = "1.5.4"
serde =  {version = "1.0.130", features=["derive"] }
serde_json = "1.0"
simple_logger = "1.13.0"
skia-safe = "0"
