[package]
name = "fonttools"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
license = "Apache-2.0"
description = "A library for reading, manipulating and writing OpenType font files"
repository = "https://github.com/simoncozens/fonttools-rs"

[dependencies]
bitflags = "1.2.1"
chrono = { version = "0.4.3" }
counter = "0.5"
encoding = "0.2"
env_logger = "0.8"
itertools = "0.10.0"
kurbo = { version = "0.8.1" }
log = "0.4"
otspec = { path = "../otspec" }
otspec_macros = { path = "../otspec_macros" }
paste = "1.0"
permutation = "0.2.5"
rayon = { version = "1.0.1", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
pretty_assertions = "0.7.2"
